cmake_minimum_required(VERSION 2.6)

PROJECT( crctrl )

# Ask for DB login data.
IF( NOT RUNTIME_LOGIN )
	IF( NOT DEFINED SQL_NAME ) 
		IF( NOT DEFINED SQL_DB ) 
			IF( NOT DEFINED SQL_PW )
				MESSAGE(FATAL_ERROR "You have to set SQL_NAME, SQL_DB and SQL_PW for DB login, or set RUNTIME_LOGIN ON")
			ENDIF( NOT DEFINED SQL_PW )
		ENDIF( NOT DEFINED SQL_DB )
	ENDIF( NOT DEFINED SQL_NAME )
	IF(NOT DEFINED SQL_NAME)
		MESSAGE(FATAL_ERROR "You did not specify a MySQL-login name.")
	ENDIF(NOT DEFINED SQL_NAME)
	IF(NOT DEFINED SQL_PW)
		MESSAGE(FATAL_ERROR "You did not specify a MySQL-login password.")
	ENDIF(NOT DEFINED SQL_PW)
	IF(NOT DEFINED SQL_DB)
		MESSAGE(FATAL_ERROR "You did not specify a database to use.")
	ENDIF(NOT DEFINED SQL_DB)
ENDIF(NOT DEFINED RUNTIME_LOGIN)

SET ( CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/etc )
SET ( BASE_DIR ${CMAKE_CURRENT_SOURCE_DIR} )

ADD_SUBDIRECTORY( helpers )
ADD_SUBDIRECTORY( src )
