cmake_minimum_required(VERSION 2.6)

PROJECT( crctrl )

# Ask for DB login data.
IF( NOT RUNTIME_LOGIN )
	IF( NOT DEFINED SQL_NAME ) 
		IF( NOT DEFINED SQL_DB ) 
			IF( NOT DEFINED SQL_PW )
				MESSAGE(FATAL_ERROR "You have to set SQL_NAME, SQL_DB and SQL_PW for DB login, or set RUNTIME_LOGIN ON")
			ENDIF()
		ENDIF()
	ENDIF()
	IF(NOT DEFINED SQL_NAME)
		MESSAGE(FATAL_ERROR "You did not specify a MySQL-login name.")
	ELSEIF(NOT SQL_NAME MATCHES "^\".*\"§")
		SET(SQL_NAME "\"${SQL_NAME}\"")
	ENDIF()
	IF(NOT DEFINED SQL_PW)
		MESSAGE(FATAL_ERROR "You did not specify a MySQL-login password.")
	ELSEIF(NOT SQL_PW MATCHES "^\".*\"§")
		SET(SQL_PW "\"${SQL_PW}\"")
	ENDIF()
	IF(NOT DEFINED SQL_DB)
		MESSAGE(FATAL_ERROR "You did not specify a database to use.")
	ELSEIF(NOT SQL_DB MATCHES "^\".*\"§")
		SET(SQL_DB "\"${SQL_DB}\"")
	ENDIF()
ENDIF()

SET ( CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/etc )
SET ( BASE_DIR ${CMAKE_CURRENT_SOURCE_DIR} )

ADD_SUBDIRECTORY( helpers )
ADD_SUBDIRECTORY( src )
